change site url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://tomHall321.github.io/football_team_selector/",
-  "name": "football_team_selector",
+  "homepage": "https://tomHall321.github.io/football-fever/",
+  "name": "football-fever",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
